# testapp

./: flake.nix  pyproject.toml
tests/: test_testapp.py
